# hero_shell

./: .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  flake.nix
.github/workflows/: release.yml
cmake/: libedit.cmake  ncurses.cmake
docs/: COMMANDS.md
include/: base64.hh  commands.hh  completions.hh  crc.hh  grpc_funcs.hh  hero_shell_state.hh  shell_utils.hh
proto/: CMakeLists.txt  hlcommands.proto  rmap.proto  superhero.proto
src/: commands.cc  completions.cc  hero_shell.cc
